--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <div class="nav-bar"></div>
+
+      <div class="cart">Cart({{ cart.length }})</div>
+      <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
     </div>
 
-    <!-- Import Js -->
-    <script src="./main.js"></script>
+    <!-- Import App -->
+    <script src="../Vue-js-shopping-cart/main.js"></script>
+
+    <!-- Import Components -->
+    <script src="../Vue-js-shopping-cart/components/ProductDisplay.js"></script>
+    <script src="../Vue-js-shopping-cart/components/ReviewForm.js"></script>
+    <script src="../Vue-js-shopping-cart/components/ReviewList.js"></script>
+
+    <!-- Mount App -->
+    <script>
+      const mountedApp = app.mount('#app')
+    </script>
   </body>
 </html>
